# falling-sand

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: color_config.h  display_config.h  simulation_config.h
src/: config.h  main.c  types.h
src/display/: display.c  display.h
src/grid/: grid.c  grid.h
src/particle/: particle.c  particle.h
tests/: test_display.c  test_grid.c  test_particle.c
